tighten up spacing and ensure titles fit in the screen on mobile

--- a/tbx/static_src/sass/abstracts/_variables.scss
+++ b/tbx/static_src/sass/abstracts/_variables.scss
@@ -82,7 +82,7 @@ $medium-font-sizes: (
 );
 
 $small-font-sizes: (
-    oversized: 56px,
+    oversized: 50px,
     xxxxl: 50px,
     xxxl: 45px,
     xxl: 32px,
