--- a/tbx/static_src/sass/components/_report-section.scss
+++ b/tbx/static_src/sass/components/_report-section.scss
@@ -1,5 +1,9 @@
 .report-section {
-    margin: 100px 0 20px;
+    margin: 50px 0 10px;
+
+    @include media-query(medium) {
+        margin: 100px 0 20px;
+    }
 
     &__short-heading {
         position: absolute;
@@ -25,7 +29,7 @@
 
     &__heading {
         @include font-size(xxl);
-        line-height: 55px;
+        line-height: 40px;
         font-weight: $weight--heavy;
         color: var(--color--dark-indigo);
         margin: 35px 0 0;
